Detection API refactoring